Optimized performance without manual garbage collecting through command line args