@@ -30,14 +30,16 @@ import org.neo4j.graphdb.Path;
 /**
  * Hello world!
  * https://github.com/neo4j-contrib/java-rest-binding
+ * java -server -Xmx512M -Xms256M -XX:+UseConcMarkSweepGC
  *
  */
 public class Neo4jAdapter {
-	private GraphDatabaseService graphDb;
-	private enum MyLabels implements Label { ROOT, KEY, UNPROCESSED, PROCESSED; }
+	private GraphDatabaseService graphDb = null;
+	private enum MyLabels implements Label { ROOT, KEY, PROCESSED; }
 	private enum MyRels implements RelationshipType { PARENT_OF }
 	private int createdCnt = 0;
-	NumberFormat nf = new DecimalFormat("###,###,##0");
+	private NumberFormat nf = new DecimalFormat("###,###,##0");
+	private int bufferCnt = 0;
 
 	public Neo4jAdapter(String filePath) {
 		this.graphDb = new GraphDatabaseFactory().newEmbeddedDatabase(filePath);
@@ -67,24 +69,35 @@ public class Neo4jAdapter {
 						});
 
 			iterator = unprocessedTraversal.traverse(startNode).nodes().iterator();
+		} //end of try
 
-			System.out.println("Traversing (v1 logic)...");
+		System.out.println("Traversing (v1 logic)...");
+
+		Transaction tx = null;
+		try {
+			tx = this.graphDb.beginTx();
 
 			while (iterator.hasNext()) {
 				Node currNode = iterator.next();
 				currNode.addLabel(MyLabels.PROCESSED);
 				traversedCnt++;
+
 				if (traversedCnt % 1000 == 0) {
 					tx.success();
-					System.gc();
-					System.out.print("\r" + nf.format(createdCnt) + " nodes traversed");
-				} //end of if
-			} //end of while
-		} finally {
-			iterator.close();
-		} //end of try
+					tx.close();
 
-		System.out.println("Done!");
+					tx = this.graphDb.beginTx();
+					System.out.print("\r" + nf.format(traversedCnt) + " nodes traversed");
+				}
+			} //end of while
+
+			tx.success();
+		} finally {
+			if (tx != null) try { tx.close(); } catch (Exception e) {}
+			iterator.close();
+		} //end of finally
+
+		System.out.println("\r" + nf.format(traversedCnt) + " total nodes traversed");
 
 		return traversedCnt;
 	} //end of traverseAll
@@ -96,9 +109,10 @@ public class Neo4jAdapter {
 
 		Node startNode = findOrCreateNode(MyLabels.ROOT, "name", "root");
 
+		//Get the iterator
 		try (Transaction tx = this.graphDb.beginTx()) {
 			TraversalDescription unprocessedTraversal = this.graphDb.traversalDescription()
-						.breadthFirst()
+						.depthFirst()
 						.evaluator(Evaluators.fromDepth(0))
 						.evaluator(Evaluators.toDepth(maxDepth-1))
 						.relationships(MyRels.PARENT_OF, Direction.OUTGOING)
@@ -110,18 +124,33 @@ public class Neo4jAdapter {
 						});
 
 			iterator = unprocessedTraversal.traverse(startNode).nodes().iterator();
+		} //end of try
+
+		//Iterate through the nodes
+		Transaction tx = null;
+		try {
+			tx = this.graphDb.beginTx();
 
 			while (iterator.hasNext()) {
 				Node currNode = iterator.next();
 				String key = currNode.hasLabel(MyLabels.ROOT) ? "" : String.valueOf(currNode.getProperty("key"));
 				createChildRecords(tx, currNode.getId(), key, maxDepth);
 				traversedCnt++;
+//				tx.success();
 			} //end of while
 
-			System.out.println();
+			System.out.println("\r" + nf.format(createdCnt) + " total nodes created");
+
+			//Clear any transactions in the buffer
+			tx.success();
+			//System.gc();
+			bufferCnt = 0;
+//			tx.close();
+//			tx = null;
 		} finally {
+			if (tx != null) try { tx.close(); } catch (Exception e) {}
 			iterator.close();
-		} //end of try
+		} //end of finally
 
 		return traversedCnt;
 	} //end of createKeyTree
@@ -140,11 +169,20 @@ public class Neo4jAdapter {
      	while ( result.hasNext() ){
 				resultList.add(result.next());
 				createdCnt++;
-				if (createdCnt % 1000 == 0) System.out.print("\r" + nf.format(createdCnt) + " nodes created");
+				bufferCnt++;
      	} //end of while
-     	tx.success();
-     	System.gc();
 		} //end of try
+
+		if (bufferCnt >= 1024) {
+			tx.success();
+			tx.close();
+			//System.gc();
+			bufferCnt = 0;
+
+			System.out.print("\r" + nf.format(createdCnt) + " nodes created");
+
+			tx = this.graphDb.beginTx();
+		} //end of if
 
 		if (parentKey.length() + 1 < maxDepth) {
 			for (Map<String, Object> row : resultList) {
@@ -219,8 +257,29 @@ public class Neo4jAdapter {
 		return nodeId;
 	} //end of findOrCreateNodeId
 
+	private void registerShutdownHook(final GraphDatabaseService graphDb) {
+		// Registers a shutdown hook for the Neo4j instance so that it
+		// shuts down nicely when the VM exits (even if you "Ctrl-C" the
+		// running application).
+		Runtime.getRuntime().addShutdownHook(new Thread() {
+			@Override
+			public void run() {
+				graphDb.shutdown();
+			} //end of run
+		});
+	} //end of registerShutdownHook
+
+
+
+
+
+
+/*
+ * Everything below is DEPRECATED
+ */
 	//This function goes through alphabet list and will fill in the gaps
-	public void createAlphaTree(Node parentNode, int maxDepth) {
+	//@deprecated But keep to fill in gaps
+	@Deprecated public void createAlphaTree(Node parentNode, int maxDepth) {
 		//defghijklmnopqrstuvwxyz
 		for (char c : "abcdefghijklmnopqrstuvwxyz".toCharArray()) {
 			Node childNode = null;
@@ -249,7 +308,7 @@ public class Neo4jAdapter {
 				} //end of if
 
 				tx.success();
-				System.gc();
+				//System.gc();
 			} //end of try
 
 			// Recursively create children til max depth
@@ -258,29 +317,11 @@ public class Neo4jAdapter {
 		} //end of for
 	} //end of createAlphaTree
 
-	private void registerShutdownHook(final GraphDatabaseService graphDb) {
-		// Registers a shutdown hook for the Neo4j instance so that it
-		// shuts down nicely when the VM exits (even if you "Ctrl-C" the
-		// running application).
-		Runtime.getRuntime().addShutdownHook(new Thread() {
-			@Override
-			public void run() {
-				graphDb.shutdown();
-			} //end of run
-		});
-	} //end of registerShutdownHook
-
-
-
-
-
-
-
 //	public void createChildRecords(long parentId, int maxDepth) {
 //		createChildRecords(parentId, "", maxDepth);
 //	} //end of createChildRecords
 
-	public long traverseAllWithCypher(long rootId) {
+	@Deprecated public long traverseAllWithCypher(long rootId) {
 		long nodeCnt = 0;
 
 		System.out.print("Traversing (using Cypher)...");
@@ -296,7 +337,7 @@ public class Neo4jAdapter {
 		return nodeCnt;
 	} //end of traverseAllWithCypher
 
-	private long traverseBatchWithCypher(long rootId) {
+	@Deprecated private long traverseBatchWithCypher(long rootId) {
 		long nodeCnt = 0;
 
 		try ( Transaction tx = this.graphDb.beginTx();Result result = this.graphDb.execute("MATCH (r:ROOT)-[:PARENT_OF*1..10]-(c) WHERE id(r) = " + rootId + " AND (c.processed = false OR c.processed IS NULL) RETURN c LIMIT 1000") ) {
@@ -307,7 +348,7 @@ public class Neo4jAdapter {
 				nodeCnt++;
      	} //end of while
      	tx.success();
-			System.gc();
+			//System.gc();
 		} //end of try
 		System.out.println("returning: " + nodeCnt);
 
@@ -321,7 +362,7 @@ public class Neo4jAdapter {
      	while (result.hasNext()) {
 				result.next();
 				nodeCnt++;
-				if (nodeCnt % 1000 == 0) System.gc(); // Run Garbage Collector every 1000 nodes
+				//if (nodeCnt % 1000 == 0) System.gc(); // Run Garbage Collector every 1000 nodes
      	} //end of while
      	tx.success();
 		} //end of try
@@ -336,7 +377,7 @@ public class Neo4jAdapter {
      	while (result.hasNext()) {
 				result.next();
 				nodeCnt++;
-				if (nodeCnt % 1000 == 0) System.gc(); // Run Garbage Collector every 1000 nodes
+				//if (nodeCnt % 1000 == 0) System.gc(); // Run Garbage Collector every 1000 nodes
      	} //end of while
      	tx.success();
 		} //end of try
